added recommendations section

--- a/index.html
+++ b/index.html
@@ -301,8 +301,8 @@
 
                                         </div>
                                         <div class="profile-content timeline-content right">
-                                            <label>Availability</label>
-                                            <div class="value">Full-Time</div>
+                                            <label>Experience</label>
+                                            <div class="value">9+ years</div>
                                         </div>
 
                                     </div>
@@ -817,6 +817,22 @@
 
                                     </div>
 
+                                    <div class="skill-holder timeline-item">
+
+
+                                        <div class="event-content timeline-content left">
+                                            <p>
+                                                Linux, Git, GitHub, Docker, Bootstrap, D3.js, Node.js, Karma, Jasmine, Bitcoin, Social Media Marketing, ERP, WordPress, Scrum, Agile Project Management
+                                            </p>
+                                        </div>
+
+                                        <div class="skill-item right">
+                                            <div class="skill"  data-text="73%" data-info="Other"   data-percent="73"   data-fill="#847066"></div>
+                                        </div>
+
+
+                                    </div>
+
                                 </div>
                             </div>
                         </div>
@@ -825,6 +841,111 @@
             </div>
         </section>
 
+        <hr class="le-hr">
+
+
+        <section id="recommendations" >
+            <div class="sticky-paper-head has-shadow ">
+                <div class="content">
+                    <h1>recommendations</h1>
+                </div>
+            </div>
+
+            <div class="sticky-paper-body has-shadow " >
+                <div class="content">
+                    <div class="row">
+                        <div class="col-xs-12">
+                            <div class="timeline-holder wow bounceInUp" >
+                                <div class="timeline-head event-head">
+                                    <div class="icon">
+                                        <i class="fa fa-users"></i>
+                                    </div>
+                                </div>
+                                <div class="timeline-body">
+                                    <div class="event-item timeline-item">
+
+                                        <div class="event-title left">
+                                            <h1>Robby Dermody</h1>
+                                            <h4>President, Symbion.io</h4>
+                                            <h5><a href="https://hr.linkedin.com/in/ivanazuber">Source</a></h5>
+                                        </div>
+
+                                        <div class="event-content timeline-content right">
+                                            <p>
+                                                I've been working with Ivana extensively for over a year now, on both the Counterparty and Symbiont teams, and have been very happy with the quality of her work. On top of being intelligent and able to figure things out on the fly, she's a very hard and diligent worker. The breadth of her skillset allows her to be very flexible, and to be able to adapt herself to most any situation she's put in. She's done a very good job on everything from marketing to software development for us. Highly satisfied.
+                                            </p>
+                                        </div>
+                                    </div>
+
+
+                                    <div class="event-item timeline-item">
+                                        <div class="event-content timeline-content left">
+                                            <p>
+                                                Ivana's work as General Manager of the Counterparty Foundation is superb. Her breadth of skills as a designer, frontend developer, copywriter, and social media lead is very rare to find. I cannot recommend her highly enough.
+                                            </p>
+
+                                        </div>
+                                        <div class="event-title right">
+                                            <h1>Evan Wagner</h1>
+                                            <h4>Founder, Counterparty</h4>
+                                            <h5><a href="https://hr.linkedin.com/in/ivanazuber">Source</a></h5>
+                                        </div>
+                                    </div>
+
+                                    <div class="event-item timeline-item">
+
+                                        <div class="event-title left">
+                                            <h1>Jurica Smircic</h1>
+                                            <h4>CEO, Rathmann</h4>
+                                            <h5><a href="https://hr.linkedin.com/in/ivanazuber">Source</a></h5>
+                                        </div>
+
+                                        <div class="event-content timeline-content right">
+                                            <p>
+                                                Ivana is a dedicated, ambitious and result driven professional who always goes above and beyond of what is asked of her. She is able to quickly pick up new skills, learn new frameworks and languages and continually deliver results.
+                                                Her creative thinking, expertise, positive can-do attitude and drive made her an absolute pleasure to work with. I highly recommend her.
+                                            </p>
+                                        </div>
+                                    </div>
+
+                                    <div class="event-item timeline-item">
+                                        <div class="event-content timeline-content left">
+                                            <p>
+                                                Ivana and I met through a mutual business connection about a year ago. Since then I have learned of Ivana's passion for social media and attention to detail. I highly recommend Ivana to anyone planning their social media strategy and wants to work with a professional who delivers 5 star service.
+                                            </p>
+
+                                        </div>
+                                        <div class="event-title right">
+                                            <h1>Carmen Perez</h1>
+                                            <h4>Mentor for Entrepreneurs</h4>
+                                            <h5><a href="https://hr.linkedin.com/in/ivanazuber">Source</a></h5>
+                                        </div>
+
+                                    </div>
+
+                                    <div class="event-item timeline-item">
+
+                                        <div class="event-title left">
+                                            <h1>Yvonne Roga</h1>
+                                            <h4>Executive Assistant and Transcriptionist</h4>
+                                            <h5><a href="https://hr.linkedin.com/in/ivanazuber">Source</a></h5>
+                                        </div>
+
+                                        <div class="event-content timeline-content right">
+                                            <p>
+                                                Ivana is professional and highly skilled IT professional. She possesses superb skills and is an amazing person to work with. She is a leader in her field. I highly recommend her.
+                                            </p>
+
+                                        </div>
+
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
         <hr class="le-hr">
 
@@ -843,10 +964,8 @@
                                 <div id="filters" class="group-selectors">
                                     <a class="active" href="#all"   data-filter="*">all</a>
                                     <a  href="#advertisement" data-filter=".development">development</a>
-
+                                    <a  href="#web" data-filter=".documentation">documentation</a>
                                     <a  href="#illustration" data-filter=".illustration">illustration</a>
-                                    <a  href="#web" data-filter=".blogging">blogging</a>
-
                                     <a  href="#branding" data-filter=".branding">branding</a>
 
                                 </div>
@@ -1044,7 +1163,108 @@
                                         </div>
                                     </figure>
 
-                                    <figure class="col-xs-12 col-sm-6 col-md-4 portfolio-item blogging development branding">
+                                    <figure class="col-xs-12 col-sm-6 col-md-4 portfolio-item development">
+                                        <a data-rel="prettyphoto" href="assets/images/portfolio/counterwallet.PNG">
+                                            <img alt="" src="assets/images/portfolio/counterwallet-small.PNG"   />
+                                        </a>
+                                        <div class="holder">
+                                            <div class="paper  has-shadow title">
+                                                <div class="content">
+                                                    Counterwallet
+                                                </div>
+
+                                            </div>
+
+                                            <div class="paper  has-shadow category">
+                                                <div class="content">
+                                                    Debugging & Testing <a class="prettyLink" href="https://counterwallet.io" rel="parent" target="_blank">Link</a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </figure>
+
+                                    <figure class="col-xs-12 col-sm-6 col-md-4 portfolio-item documentation">
+                                        <a data-rel="prettyphoto" href="assets/images/portfolio/counterparty.PNG">
+                                            <img alt="" src="assets/images/portfolio/counterparty-small.png"   />
+                                        </a>
+                                        <div class="holder">
+                                            <div class="paper  has-shadow title">
+                                                <div class="content">
+                                                    Documentation
+                                                </div>
+
+                                            </div>
+
+                                            <div class="paper  has-shadow category">
+                                                <div class="content">
+                                                    Counterparty.io <a class="prettyLink" href="http://counterparty.io/docs/" rel="parent" target="_blank">Link</a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </figure>
+
+
+                                    <figure class="col-xs-12 col-sm-6 col-md-4 portfolio-item documentation">
+                                        <a data-rel="prettyphoto" href="assets/images/portfolio/counterparty-news.PNG">
+                                            <img alt="" src="assets/images/portfolio/counterparty-news-small.png"   />
+                                        </a>
+                                        <div class="holder">
+                                            <div class="paper  has-shadow title">
+                                                <div class="content">
+                                                    Dev Evangelism
+                                                </div>
+
+                                            </div>
+
+                                            <div class="paper  has-shadow category">
+                                                <div class="content">
+                                                    Over 50 Blog Posts <a class="prettyLink" href="http://counterparty.io/news/" rel="parent" target="_blank">Link</a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </figure>
+
+                                    <figure class="col-xs-12 col-sm-6 col-md-4 portfolio-item development">
+                                        <a data-rel="prettyphoto" href="assets/images/portfolio/code.PNG">
+                                            <img alt="" src="assets/images/portfolio/code-small.png"   />
+                                        </a>
+                                        <div class="holder">
+                                            <div class="paper  has-shadow title">
+                                                <div class="content">
+                                                    Clean Code
+                                                </div>
+
+                                            </div>
+
+                                            <div class="paper  has-shadow category">
+                                                <div class="content">
+                                                    Refactoring & Optimization
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </figure>
+
+                                    <figure class="col-xs-12 col-sm-6 col-md-4 portfolio-item development">
+                                        <a data-rel="prettyphoto" href="assets/images/portfolio/tdd.PNG">
+                                            <img alt="" src="assets/images/portfolio/tdd-small.png"   />
+                                        </a>
+                                        <div class="holder">
+                                            <div class="paper  has-shadow title">
+                                                <div class="content">
+                                                    Well Tested
+                                                </div>
+
+                                            </div>
+
+                                            <div class="paper  has-shadow category">
+                                                <div class="content">
+                                                    Red Green Refactor
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </figure>
+
+                                    <figure class="col-xs-12 col-sm-6 col-md-4 portfolio-item documentation development branding">
                                         <a data-rel="prettyphoto" href="assets/images/portfolio/BloggLess1.PNG">
                                             <img alt="" src="assets/images/portfolio/BloggLess1-small.png"   />
                                         </a>
@@ -1063,6 +1283,7 @@
                                             </div>
                                         </div>
                                     </figure>
+
                                     <figure class="col-xs-12 col-sm-6 col-md-4 portfolio-item illustration">
                                         <a data-rel="prettyphoto" href="assets/images/portfolio/brochure2.jpg">
                                             <img alt="" src="assets/images/portfolio/brochure1-small.png"   />
@@ -1082,6 +1303,8 @@
                                             </div>
                                         </div>
                                     </figure>
+
+
                                 </div>
                             </div>
                         </div>
