added Java portfolio and skill

--- a/index.html
+++ b/index.html
@@ -773,15 +773,16 @@
 
                                     </div>
 
+
                                     <div class="skill-holder timeline-item">
 
                                         <div class="skill-item left">
-                                            <div class="skill"  data-text="95%" data-info="SQL"   data-percent="95"   data-fill="#272425"></div>
+                                            <div class="skill"  data-text="78%" data-info="Java"   data-percent="78"   data-fill="#272425"></div>
                                         </div>
 
                                         <div class="event-content timeline-content right">
                                             <p>
-                                                Certified MCITP with over 7 years experience in SQL, although recently starting to explore <strong>NoSQL databases</strong>.
+                                                Developed several simple Java desktop applications during my Master's program. Built a desktop paint app with optimized code architecture, implementing several design patterns.
                                             </p>
                                         </div>
 
@@ -806,30 +807,49 @@
                                     <div class="skill-holder timeline-item">
 
                                         <div class="skill-item left">
-                                            <div class="skill"  data-text="63%" data-info="FinTech"   data-percent="63"   data-fill="#272425"></div>
+                                            <div class="skill"  data-text="95%" data-info="SQL"   data-percent="95"   data-fill="#272425"></div>
                                         </div>
 
                                         <div class="event-content timeline-content right">
                                             <p>
+                                                Certified MCITP with over 7 years experience in SQL, although recently starting to explore <strong>NoSQL databases</strong>.
+                                            </p>
+                                        </div>
+
+                                    </div>
+
+
+
+                                    <div class="skill-holder timeline-item">
+
+                                        <div class="event-content timeline-content left">
+                                            <p>
                                                 Although I only recently started working on solutions related to financial markets I quickly gained experience and knowledge of FinTech.
                                             </p>
                                         </div>
+
+                                        <div class="skill-item right">
+                                            <div class="skill"  data-text="63%" data-info="FinTech"   data-percent="63"   data-fill="#272425"></div>
+                                        </div>
+
+
 
                                     </div>
 
                                     <div class="skill-holder timeline-item">
 
 
-                                        <div class="event-content timeline-content left">
+
+
+                                        <div class="skill-item left">
+                                            <div class="skill"  data-text="73%" data-info="Other"   data-percent="73"   data-fill="#847066"></div>
+                                        </div>
+
+                                        <div class="event-content timeline-content right">
                                             <p>
                                                 Linux, Git, GitHub, Docker, Bootstrap, D3.js, Node.js, Karma, Jasmine, Bitcoin, Social Media Marketing, ERP, WordPress, Scrum, Agile Project Management
                                             </p>
                                         </div>
-
-                                        <div class="skill-item right">
-                                            <div class="skill"  data-text="73%" data-info="Other"   data-percent="73"   data-fill="#847066"></div>
-                                        </div>
-
 
                                     </div>
 
@@ -1041,6 +1061,31 @@
                                         </div>
                                     </figure>
 
+                                    <figure class="col-xs-12 col-sm-6 col-md-4 portfolio-item development documentation">
+                                        <a data-rel="prettyphoto" href="assets/images/portfolio/java2.PNG">
+                                            <img alt="" src="assets/images/portfolio/java2-small.png"   />
+                                        </a>
+
+                                        <div class="holder">
+                                            <div class="paper  has-shadow title">
+                                                <div class="content">
+                                                    Desktop Paint App
+                                                </div>
+
+                                            </div>
+
+                                            <div class="paper  has-shadow category">
+                                                <div class="content">
+                                                    <a class="prettyLink" href="https://github.com/ivanaszuber/java-play" rel="parent" target="_blank">Code</a>
+                                                    Java
+                                                    <a class="prettyLink" href="https://github.com/ivanaszuber/java-play/blob/master/README.md" rel="parent" target="_blank">Doc</a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </figure>
+
+
+
                                     <figure class="col-xs-12 col-sm-6 col-md-4 portfolio-item development">
                                         <a data-rel="prettyphoto" href="assets/images/portfolio/symbiont2.PNG">
                                             <img alt="" src="assets/images/portfolio/symbiont2-small.PNG"  />
@@ -1101,68 +1146,6 @@
                                         </div>
                                     </figure>
 
-
-
-                                    <figure class="col-xs-12 col-sm-6 col-md-4 portfolio-item development illustration">
-                                        <a data-rel="prettyphoto" href="assets/images/portfolio/foundation1.PNG">
-                                            <img alt="" src="assets/images/portfolio/foundation1-small.PNG"  />
-                                        </a>
-                                        <div class="holder">
-                                            <div class="paper  has-shadow title">
-                                                <div class="content">
-                                                    Website Development
-                                                </div>
-
-                                            </div>
-
-                                            <div class="paper  has-shadow category">
-                                                <div class="content">
-                                                    <a class="prettyLink" href="http://counterpartyfoundation.org/" rel="parent" target="_blank">Counterparty Foundation</a>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </figure>
-
-                                    <figure class="col-xs-12 col-sm-6 col-md-4 portfolio-item development illustration">
-                                        <a data-rel="prettyphoto" href="assets/images/portfolio/symbiont.PNG">
-                                            <img alt="" src="assets/images/portfolio/symbiont-small.PNG"  />
-                                        </a>
-                                        <div class="holder">
-                                            <div class="paper  has-shadow title">
-                                                <div class="content">
-                                                    Website Development
-                                                </div>
-
-                                            </div>
-
-                                            <div class="paper  has-shadow category">
-                                                <div class="content">
-                                                    <a class="prettyLink" href="http://symbiont.io/" rel="parent" target="_blank">Symbiont.io</a>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </figure>
-
-                                    <figure class="col-xs-12 col-sm-6 col-md-4 portfolio-item development illustration">
-                                        <a data-rel="prettyphoto" href="assets/images/portfolio/ivanazuber.PNG">
-                                            <img alt="" src="assets/images/portfolio/ivanazuber-small.png"  />
-                                        </a>
-                                        <div class="holder">
-                                            <div class="paper  has-shadow title">
-                                                <div class="content">
-                                                    Website Development
-                                                </div>
-
-                                            </div>
-
-                                            <div class="paper  has-shadow category">
-                                                <div class="content">
-                                                    <a class="prettyLink" href="http://ivanazuber.com/" rel="parent" target="_blank">ivanazuber.com</a>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </figure>
-
                                     <figure class="col-xs-12 col-sm-6 col-md-4 portfolio-item development">
                                         <a data-rel="prettyphoto" href="assets/images/portfolio/counterwallet.PNG">
                                             <img alt="" src="assets/images/portfolio/counterwallet-small.PNG"   />
@@ -1182,6 +1165,68 @@
                                             </div>
                                         </div>
                                     </figure>
+
+                                    <figure class="col-xs-12 col-sm-6 col-md-4 portfolio-item development illustration">
+                                        <a data-rel="prettyphoto" href="assets/images/portfolio/foundation1.PNG">
+                                            <img alt="" src="assets/images/portfolio/foundation1-small.PNG"  />
+                                        </a>
+                                        <div class="holder">
+                                            <div class="paper  has-shadow title">
+                                                <div class="content">
+                                                    Web Development
+                                                </div>
+
+                                            </div>
+
+                                            <div class="paper  has-shadow category">
+                                                <div class="content">
+                                                    <a class="prettyLink" href="http://counterpartyfoundation.org/" rel="parent" target="_blank">Counterparty Foundation</a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </figure>
+
+                                    <figure class="col-xs-12 col-sm-6 col-md-4 portfolio-item development illustration">
+                                        <a data-rel="prettyphoto" href="assets/images/portfolio/symbiont.PNG">
+                                            <img alt="" src="assets/images/portfolio/symbiont-small.PNG"  />
+                                        </a>
+                                        <div class="holder">
+                                            <div class="paper  has-shadow title">
+                                                <div class="content">
+                                                    Web Development
+                                                </div>
+
+                                            </div>
+
+                                            <div class="paper  has-shadow category">
+                                                <div class="content">
+                                                    <a class="prettyLink" href="http://symbiont.io/" rel="parent" target="_blank">Symbiont.io</a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </figure>
+
+                                    <figure class="col-xs-12 col-sm-6 col-md-4 portfolio-item development illustration">
+                                        <a data-rel="prettyphoto" href="assets/images/portfolio/ivanazuber.PNG">
+                                            <img alt="" src="assets/images/portfolio/ivanazuber-small.png"  />
+                                        </a>
+                                        <div class="holder">
+                                            <div class="paper  has-shadow title">
+                                                <div class="content">
+                                                    Web Development
+                                                </div>
+
+                                            </div>
+
+                                            <div class="paper  has-shadow category">
+                                                <div class="content">
+                                                    <a class="prettyLink" href="http://ivanazuber.com/" rel="parent" target="_blank">ivanazuber.com</a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </figure>
+
+
 
                                     <figure class="col-xs-12 col-sm-6 col-md-4 portfolio-item documentation">
                                         <a data-rel="prettyphoto" href="assets/images/portfolio/counterparty.PNG">
@@ -1259,6 +1304,26 @@
                                             <div class="paper  has-shadow category">
                                                 <div class="content">
                                                     Red Green Refactor
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </figure>
+
+                                    <figure class="col-xs-12 col-sm-6 col-md-4 portfolio-item development documentation">
+                                        <a data-rel="prettyphoto" href="assets/images/portfolio/java-uml.PNG">
+                                            <img alt="" src="assets/images/portfolio/java-uml-small.png"   />
+                                        </a>
+                                        <div class="holder">
+                                            <div class="paper  has-shadow title">
+                                                <div class="content">
+                                                    Modular Architecture
+                                                </div>
+
+                                            </div>
+
+                                            <div class="paper  has-shadow category">
+                                                <div class="content">
+                                                    UML
                                                 </div>
                                             </div>
                                         </div>
