--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     <link rel="stylesheet" href="assets/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="assets/css/stylesheet.css">
 
+    <link rel="shortcut icon" href="assets/images/favicon.png" type="image/x-icon">
+
 
 
 </head>
