replaced facebook with linkedin

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                                 <a class="fa fa-twitter" href="https://twitter.com/ivanazuber" rel="parent" target="_blank"></a>
                             </li>
                             <li>
-                                <a class="fa fa-facebook" href="https://www.facebook.com/ivanas.zuber" rel="parent" target="_blank"></a>
+                                <a class="fa fa-linkedin" href="https://hr.linkedin.com/in/ivanazuber" rel="parent" target="_blank"></a>
                             </li>
 
                             <li>
