--- a/index.html
+++ b/index.html
@@ -1040,8 +1040,8 @@
                                     </figure>
 
                                     <figure class="col-xs-12 col-sm-6 col-md-4 portfolio-item development">
-                                        <a data-rel="prettyphoto" href="assets/images/portfolio/Pegula1.PNG">
-                                            <img alt="" src="assets/images/portfolio/Pegula1-small.png"   />
+                                        <a data-rel="prettyphoto" href="assets/images/portfolio/pegula.PNG">
+                                            <img alt="" src="assets/images/portfolio/pegula-small.png"   />
                                         </a>
 
                                         <div class="holder">
@@ -1056,8 +1056,8 @@
                                                 <div class="content">
                                                     AngularJS + Django
                                                     <br>
-                                                    <a class="prettyLink" href="https://github.com/ivanaszuber/tagmatic-frontend" rel="parent" target="_blank">Code</a>
-                                                    <a class="prettyLink" href="http://ivanaszuber.github.io/tagmatic-frontend/demo/" rel="parent" target="_blank">Demo</a>
+                                                    <a class="prettyLink" href="https://github.com/ivanaszuber/pegula-crm" rel="parent" target="_blank">Code</a>
+                                                    <a class="prettyLink" href="http://ivanaszuber.github.io/pegula-crm" rel="parent" target="_blank">Demo</a>
                                                 </div>
                                             </div>
                                         </div>
