typo in image name

--- a/index.html
+++ b/index.html
@@ -1041,7 +1041,7 @@
 
                                     <figure class="col-xs-12 col-sm-6 col-md-4 portfolio-item development">
                                         <a data-rel="prettyphoto" href="assets/images/portfolio/pegula.PNG">
-                                            <img alt="" src="assets/images/portfolio/pegula-small.png"   />
+                                            <img alt="" src="assets/images/portfolio/pegula-small.PNG"   />
                                         </a>
 
                                         <div class="holder">
