added pegula backend link

--- a/index.html
+++ b/index.html
@@ -1057,7 +1057,7 @@
                                                     AngularJS + Django
                                                     <br>
                                                     <a class="prettyLink" href="https://github.com/ivanaszuber/pegula-crm" rel="parent" target="_blank">Code</a>
-                                                    <a class="prettyLink" href="http://ivanaszuber.github.io/pegula-crm" rel="parent" target="_blank">Demo</a>
+                                                    <a class="prettyLink" href="http://ivanaszuber.github.io/pegula-django" rel="parent" target="_blank">Backend</a>
                                                 </div>
                                             </div>
                                         </div>
