small social media links open in new window

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                                     <li>
                                         <div class="info-item">
                                             <i class="fa fa-twitter"></i>
-                                            <span>Twitter: <a href="https://twitter.com/ivanazuber">@ivanazuber</a></span>
+                                            <span>Twitter: <a href="https://twitter.com/ivanazuber" rel="parent" target="_blank">@ivanazuber</a></span>
                                         </div>
                                     </li>
 
@@ -193,19 +193,19 @@
                                 <div class="social-icons small">
                                     <ul>
                                         <li>
-                                            <a class="fa fa-github" href="https://github.com/ivanaszuber"></a>
+                                            <a class="fa fa-github" href="https://github.com/ivanaszuber" rel="parent" target="_blank"></a>
                                         </li>
                                         <li>
-                                            <a class="fa fa-facebook" href="https://www.facebook.com/ivanas.zuber"></a>
+                                            <a class="fa fa-facebook" href="https://www.facebook.com/ivanas.zuber" rel="parent" target="_blank"></a>
                                         </li>
                                         <li>
-                                            <a class="fa fa-twitter" href="https://twitter.com/ivanazuber"></a>
+                                            <a class="fa fa-twitter" href="https://twitter.com/ivanazuber" rel="parent" target="_blank"></a>
                                         </li>
                                         <li>
-                                            <a class="fa fa-google-plus" href="https://plus.google.com/u/0/+IvanaZuber_BloggLess"></a>
+                                            <a class="fa fa-google-plus" href="https://plus.google.com/u/0/+IvanaZuber_BloggLess" rel="parent" target="_blank"></a>
                                         </li>
                                         <li>
-                                            <a class="fa fa-youtube" href="https://www.youtube.com/watch?v=pSBz6PWXtlY"></a>
+                                            <a class="fa fa-youtube" href="https://www.youtube.com/watch?v=pSBz6PWXtlY" rel="parent" target="_blank"></a>
                                         </li>
 
                                     </ul>
