fixed demo link

--- a/index.html
+++ b/index.html
@@ -1010,7 +1010,7 @@
                                                     AngularJS + Flask
                                                     <br>
                                                     <a class="prettyLink" href="https://github.com/ivanaszuber/tagmatic-frontend" rel="parent" target="_blank">Code</a>
-                                                    <a class="prettyLink" href="http://ivanaszuber.github.io/tagmatic-frontend/demo/" rel="parent" target="_blank">Demo</a>
+                                                    <a class="prettyLink" href="http://ivanaszuber.github.io/tagmatic/demo/" rel="parent" target="_blank">Demo</a>
                                                 </div>
                                             </div>
                                         </div>
